# WebshopSyncCLI

./: .gitignore  ADAPTER_CLEANUP_GUIDE.md  Dockerfile  PERFION_ADAPTER_REFACTOR_PROMPT.md  README.md  pyproject.toml  requirements.txt  tricorp_colors.txt
.github/workflows/: docker-publish.yml
ai_docs/: ADAPTER_CLEANUP_PROMPT.md  CCV_ADAPTER_REFACTOR_PROMPT.md
data/: hydrowear2025.xlsx  mascot_colors.txt  mascot_sizing.txt  tricorp_sizing.txt
data/ccv_shop/articles/: mock_articles_01.json
data/perfion/responses/: perfion_output_multi_products.xml
diffsync_cli/: casts.py  errors.py  main.py  utils.py
diffsync_cli/cli/: __init__.py
diffsync_cli/cli/commands/: __init__.py  (+3 more)
diffsync_cli/config/: __init__.py
infra/: dashboard.yaml  mascot_job.yaml  namespace.yaml  readme.md
scripts/: create_hydrowear_attributes.py  create_systemd_jobs.py
settings/: ccv_shop_elten.yaml  ccv_shop_hydrowear.yaml  ccv_shop_mascot.yaml  ccv_shop_tricorp.yaml  mascot_test.yaml
syncly/: casts.py  constants.py  diff.py  helpers.py  main.py  settings.py  utils.py
syncly/adapters/: adapter_ccv.py  adapter_mascot.py  adapter_mock.py  adapter_perfion.py  adapter_third_party.py  ccv.py  ccv.py.old  perfion.py  perfion.py.old  third_party.py
syncly/cli/: __init__.py  helpers.py  logging.py
syncly/clients/: errors.py
syncly/config/: __init__.py  env_settings.py  utils.py  yaml_settings.py
syncly/models/: base.py  ccv_shop.py  third_party.py
syncly/webhook/: __init__.py  discord.py
tests/: utils_test.py
tests/config/: config_test.py
tests/webhook/: discord_test.py
(+97 files in other folders)
